--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+
+
 @media screen and (max-width: 600px){
     .midHeaderColumn{
         font-size: smaller;
@@ -14,6 +16,8 @@
         height: 6px;
     }
 }
+
+/* Header Styles */
 
 .hamburgerBars {
     width: 40px;
@@ -28,10 +32,18 @@
     padding-left: 8px;
 }
 
+.hamburgerContainer:hover {
+    background-color: grey;
+    border-radius: 10%;
+}
+
+
 .headerBox {
     display: flex;
     background-color:#0b0C10;
     text-align: center;
+    left: 0;
+    top: 0;
 }
 
 .leftHeaderColumn {
@@ -47,6 +59,54 @@
 }
 
 .rightHeaderColumn {
+    color: #66FCF1;
     width: 33%;
 }
 
+
+.container {
+    height: 100%;
+    min-height: 100%;
+	display: flex;
+    flex-direction: column;
+    color: red;
+}
+
+/* Drawer Styles */
+
+.sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color:#272727;
+    overflow-x: hidden;
+    transition: 0.3s;
+    padding-top: 20px;
+}
+
+.sidebar a {  
+    text-decoration: none;
+    font-size: 25px;
+    color:  #66FCF1;
+    display: block;
+}
+
+.sidebar a:hover {
+    color: #c5c6c7; 
+}
+
+.closebtn {
+    position: absolute;
+    right: 10%;
+    font-size: 36px;
+}
+
+.sidebar .closebtn:hover{
+    color: coral;
+}
+
+.menuLink {
+    margin-top: 10px;
+}
