Change contents of 2nd question, change reset button unhovered color

--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,7 @@
 }
 
 .resetBtn {
-    background-color:#3E8472;
+    background-color:coral;
     color:#F3F7E7;
     padding: 1% 2%;
     cursor: pointer; 
