--- a/styles.css
+++ b/styles.css
@@ -95,12 +95,18 @@
 
 /* Question window */
 
+.questionImage{
+    width: 50%;
+    margin: 2%;
+}
+
 .answerList {
     font-size: smaller;
     list-style-type: none;
-    margin-top: 2%;
+    margin-top: 1%;
     left: 0;
-    margin-right: 7%
+    margin-left: 1%;
+    text-align: left;
 }
 
 
@@ -121,6 +127,16 @@
     border: solid 10px  #252F2A;
 }
 
+.questionPictureContainer {
+    background-color: #F3F7E7;
+    width: 80%;
+    max-width: 480px;
+    margin-top: 2%;
+    text-align: center;
+    border: solid 5px#252F2A;
+}
+
+
 .questionContainer * {
     color:#252F2A;
 }
@@ -136,7 +152,7 @@
     background-color: #252F2A;
     font-size: 150%;
     color: #F3F7E7;
-    padding: 2.5% 10%;
+    padding: 1.5% 6%;
     cursor: pointer; 
     border-radius: 20px;
     margin: 2.5%;
@@ -168,7 +184,7 @@
     position: fixed;
     top: 0;
     right: 0;
-    background-color:#9BD2AD;
+    background-color:#DDE2C0;
     overflow-x: hidden;
     transition: 0.3s;
     padding-top: 20px;
